Fix CSS issue with tiles wrapping to next line

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -27,8 +27,6 @@ h1 {
   flex: 1;
   order: 2;
   margin: auto;
-  width: 100%;
-  height: 100%;
 }
 
 .farm {
